fixed position of image to be in center so face is always visible

--- a/css/style.css
+++ b/css/style.css
@@ -800,3 +800,10 @@ fieldset {
         font-size: 10px;
     }
 }
+
+
+@media (max-width: 450px) {
+    #home{
+        background-position: 50% !important; 
+    }
+}
